[package]
name = "bevy-audio-v2"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_app = "0.14.2"
bevy_derive = "0.14.2"
bevy_ecs = "0.14.2"
bevy_log = "0.14.2"
bevy_utils = "0.14.2"

firewheel = { git = "https://github.com/BillyDM/firewheel.git" }

[dev-dependencies]
bevy = "0.14.2"
atomic_float = "1.1.0"
